[gd_scene load_steps=2 format=3 uid="uid://ojl4hf0cme4c"]

[ext_resource type="Script" path="res://menus/cinnamon_roll_menu.gd" id="1_wfjj2"]

[node name="Cinnamon-roll-menu" type="Node2D"]
script = ExtResource("1_wfjj2")

[node name="Level 1" type="Button" parent="."]
offset_left = 476.0
offset_top = 135.0
offset_right = 630.0
offset_bottom = 166.0
scale = Vector2(1.37027, 1.60207)
text = "Gather Ingredients
"

[node name="Level 2" type="Button" parent="."]
offset_left = 484.0
offset_top = 208.0
offset_right = 613.0
offset_bottom = 239.0
scale = Vector2(1.52862, 1.61267)
text = "Beat the Dough"

[node name="Level 3" type="Button" parent="."]
offset_left = 482.0
offset_top = 290.0
offset_right = 628.0
offset_bottom = 321.0
scale = Vector2(1.38513, 1.71185)
text = "Finishing Touches
"

[node name="Label" type="Label" parent="."]
offset_left = 466.0
offset_top = 63.0
offset_right = 640.0
offset_bottom = 86.0
scale = Vector2(1.33164, 1.54103)
text = "Make A Cinnamon Roll
"

[connection signal="pressed" from="Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level 3" to="." method="_on_level_3_pressed"]
